test/tests/stages/16_characters_and_strings/valid/libraries/global_char.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[4]: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: c
        CSingleInit: 
          CConstant: 
            CConstInt: 
              TInt: 100
            None: 
          None: 
        Char: 
        None: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: uc
        CSingleInit: 
          CConstant: 
            CConstInt: 
              TInt: 250
            None: 
          None: 
        UChar: 
        None: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: sc
        CSingleInit: 
          CConstant: 
            CConstInt: 
              TInt: 0
            None: 
          None: 
        SChar: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: update_global_chars
        List[0]: 
        CB: 
          List[4]: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CVar: 
                    TIdentifier: c
                    None: 
                  CBinary: 
                    CAdd: 
                    CVar: 
                      TIdentifier: c
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 10
                      None: 
                    None: 
                  None: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CVar: 
                    TIdentifier: uc
                    None: 
                  CBinary: 
                    CAdd: 
                    CVar: 
                      TIdentifier: uc
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 10
                      None: 
                    None: 
                  None: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CVar: 
                    TIdentifier: sc
                    None: 
                  CBinary: 
                    CSubtract: 
                    CVar: 
                      TIdentifier: sc
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 10
                      None: 
                    None: 
                  None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
